# Chtholly

./: .gitignore  README.md  kirami.config.toml  pyproject.toml  requirements.txt
data/: moyu.json
data/fishing/: fishes.json
data/moegoe/: profile.toml
plugins/amsr/: README.md  __init__.py  service.toml
plugins/board_game/: README.md  __init__.py  game.py  model.py  service.toml
plugins/bread_shop/: __init__.py  bread_event.py  bread_handle.py  bread_operate.py  config.py  service.toml
plugins/chatgpt/: README.md  __init__.py  config.py  data_handle.py  service.toml
plugins/daily60s/: README.md  __init__.py  service.toml
plugins/dinggong_voice/: README.md  __init__.py  service.toml
plugins/fishing/: README.md  __init__.py  config.py  data_source.py  fishes.json  image_handle.py  model.py  service.toml
plugins/fox/: README.md  __init__.py  service.toml
plugins/friends/: __init__.py  config.py  service.toml
plugins/gpbt/: README.md  __init__.py  dataget.py  readJSON.py  service.toml
plugins/help/: __init__.py  service.toml
plugins/help/templates/: menu.css  menu.html  menu.js
plugins/horserace/: README.md  __init__.py  config.py  events_main.py  horse.py  race_group.py  service.toml  start.py
plugins/horserace/events/: 赫尔事件集v1.json  赫尔的赛马场事件簿.json
plugins/image/: README.md  __init__.py  config.py  delete_img.py  new_Catalog.py  send_img.py  service.toml  upload_img.py
plugins/image_api/: __init__.py  config.py
plugins/image_api/templates/: images.html  index.html
plugins/image_api/templates/static/: tailwind.css
plugins/mockingbird/: README.md  __init__.py  config.py  data_source.py  res_download.py  service.toml
plugins/morning/: __init__.py  config.py  data_source.py  service.toml
plugins/moyu/: README.md  __init__.py  service.toml
plugins/music/: README.md  __init__.py  data_source.py  service.toml
plugins/poke/: __init__.py  service.toml
plugins/random_cute/: README.md  __init__.py  service.toml
plugins/sign/: README.md  __init__.py  base.py  service.toml  text.py  utils.py
plugins/vits/: README.md  __init__.py  service.toml  utils.py
plugins/waifu/: README.md  __init__.py  config.py  record.py  service.toml
plugins/weather/: README.md  __init__.py  config.py  render_pic.py  service.toml  weather_data.py
utils/: utils.py
utils/mockingbirdforuse/: __init__.py
utils/mockingbirdforuse/encoder/: inference.py
utils/mockingbirdforuse/synthesizer/: inference.py
utils/mockingbirdforuse/synthesizer/models/: tacotron.py
utils/mockingbirdforuse/vocoder/: distribution.py
utils/mockingbirdforuse/vocoder/hifigan/: inference.py  models.py
utils/mockingbirdforuse/vocoder/wavernn/: inference.py
utils/mockingbirdforuse/vocoder/wavernn/models/: deepmind_version.py  fatchord_version.py
