[project]
name = "Chtholly"
version = "0.1.0"
description = "Chtholly"
readme = "README.md"
authors = [{ name = "FrostN_0v0", email = "suny25802@gmail.com" }]
license = { text = "AGPL-3.0" }
requires-python = ">=3.12, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-color-see-see>=0.2.0",
    "nonebot2[fastapi]>=2.4.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["/plugins"]
builtin_plugins = []
